Modifications to support Java 8 as the minimum requirement as per JFreeChart 1.5.3
* Remove @Deprecated annotation elements not supported by Java 8.
* Remove use of Set.of() not supported by Java 8.